--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
@@ -152,9 +152,9 @@
                                                         {
                                                             if (!item.activo.Value)
                                                             {
-                                                                @*<a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
+                                                                <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
                                                                         <i class="fa fa-check"></i>
-                                                                    </a>*@
+                                                                    </a>
                                                             }
                                                             else
                                                             {
